clusters/eg/probe-gw-envoyproxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: probe-gw
  namespace: default
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: probe-gw-proxy
  addresses:
    - type: IPAddress
      value: 172.19.255.240
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
